taking out the trash
Signed-off-by: rxcmr <lythe1107@icloud.com>